speaker backend
